--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,70 +1,29 @@
-@define-color black #181818;
-@define-color grey #595959;
-@define-color red #ee5696;
-@define-color white #f3f3f3;
-@define-color blue #78a9ff;
-
 * {
-    border: none;
-    border-radius: 0;
-    min-height: 0;
-    font-family: "iosevka nerd font";
-    font-weight: 500;
-    font-size: 16px;
-    padding: 0;
+	font-family: "Noto Sans Mono"
 }
 
-window#waybar {
-    background: @black;
-    border: 1px solid @grey;
-}
-
-tooltip {
-    background-color: @black;
-    border: 2px solid @grey;
-}
-
-#clock,
-#tray,
-#cpu,
-#memory,
-#battery,
-#network,
-#pulseaudio {
-    margin: 6px 6px 6px 0px;
-    padding: 2px 8px;
+window {
+	font-size: 18px;
+	color: #dddddd;
+	background-color: #141414;
 }
 
 #workspaces {
-    background-color: @;
-    margin: 6px 0px 6px 6px;
-    border: 1px solid @grey;
+	margin-left: 20px;
 }
 
 #workspaces button {
-    all: initial;
-    min-width: 0;
-    padding: 2px 4px;
-    color: @white;
+	font-size: 17px;
+	color: #dddddd;
+	border-radius: 0;
+	border-bottom: 2px solid #78a9ff;
 }
 
-#tray {
-    background-color: #d4be98;
-    border: 2px solid #c7ab7a;
+#workspaces button.active {
+	font-size: 18px;
+	border-bottom: 4px solid #78a9ff;
 }
 
-#cpu,
-#memory,
-#network,
-#pulseaudio {
-    background-color: @black;
-    border: 1px solid @grey;
-    color: @white;
-}
-
-#cpu.critical,
-#memory.critical {
-    background-color: @black;
-    border: 1px solid @red;
-    color: @red;
+.modules-right {
+	margin-right: 25px;
 }
